# mytorch

./: .gitignore  CMakeLists.txt  README.md  dockerfile  main.cpp  makefile  remove_brackets.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
data/MNIST_subsamp100/: t10k-images-idx3-ubyte  train-images-idx3-ubyte
data/MNIST_subsamp1000/: t10k-labels-idx1-ubyte  train-labels-idx1-ubyte
src/: autograd.cpp  autograd.h  optim.h  tensorlib.h
src/activations/: activations.h  relu.h  sigmoid.h
src/dataset/: dataloader.cpp  dataloader.h  dataset.h  mnist_dataset.cpp  mnist_dataset.h  sample.h
src/layers/: conv2d.cpp  conv2d.h  linear.cpp  linear.h
src/loss_functions/: cross_entropy.cpp  cross_entropy.h  loss_functions.h  mse.h
src/networks/: cnn.cpp  cnn.h  mlp.cpp  mlp.h  mnist_dnn.h
src/ops/: add.cpp  add.h  continguous.h  conv2d.cpp  conv2d.h  im2col.cpp  im2col.h  matmul.cpp  matmul.h  matmul_neon.h  mul.cpp  mul.h  ops.h  reshape.cpp  reshape.h  reshape_and_view.h  softmax.h  transpose.h
src/ops/activations/: relu.cpp  relu.h  sigmoid.cpp  sigmoid.h
src/optim/: sgd.h
src/tensor/: storage.h  tensor.cpp  tensor.h  tensor_implementation.h  utils.h
src/utils/: metrics.cpp  metrics.h  random.h
tests/: README.md
tests/datasets/: test_mnist_datasets.cpp
tests/profiling/: bench_mnist.cpp  bench_ops.cpp  profile_mnist.cpp
tests/smoke/: test_cnn_mnist_subsamp1000.cpp  test_cross_entropy_smoke.cpp  test_mlp_mnist_subsamp1000.cpp  test_mnist_dnn_.cpp  test_xor_model.cpp
tests/unit/dataset/: test_dataloader.cpp  test_dataset.cpp
tests/unit/layers/: test_conv2d.cpp  test_linear.cpp
tests/unit/loss_functions/: test_cross_entropy.cpp  test_mse.cpp  test_mse_loss.cpp
tests/unit/networks/: test_mlp.cpp
tests/unit/ops/: test_add.cpp  test_contiguous.cpp  test_im2col.cpp  test_matmul.cpp  test_mul.cpp  test_relu.cpp  test_reshape.cpp  test_sigmoid.cpp  test_softmax.cpp
tests/unit/optim/: test_sgd.cpp
tests/unit/tensor/: test_storage.cpp  test_tensor.cpp  test_tensor_impl.cpp
tests/unit/utils/: test_metrics.cpp
